--- a/ReadAndAnalysis.App/ReadAndAnalysis.App.csproj
+++ b/ReadAndAnalysis.App/ReadAndAnalysis.App.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ghasedak.Core" Version="1.1.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
